tests/ui/consts/qualif-indirect-mutation-fail.stderr
error[E0493]: destructor of `Option<String>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:12:9
   |
LL |     let mut x = None;
   |         ^^^^^ the destructor for this type cannot be evaluated in constants
...
LL | };
   | - value is dropped here

error[E0080]: calling non-const function `<Vec<u8> as Drop>::drop`
  --> $DIR/qualif-indirect-mutation-fail.rs:18:1
   |
LL | };
   | ^ evaluation of `A1` failed inside this call
   |
note: inside `drop_in_place::<Option<String>> - shim(Some(Option<String>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `drop_in_place::<String> - shim(Some(String))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `drop_in_place::<Vec<u8>> - shim(Some(Vec<u8>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

error[E0493]: destructor of `Option<String>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:28:9
   |
LL |     let _z = x;
   |         ^^ the destructor for this type cannot be evaluated in constants
LL | };
   | - value is dropped here

error[E0080]: calling non-const function `<Vec<u8> as Drop>::drop`
  --> $DIR/qualif-indirect-mutation-fail.rs:29:1
   |
LL | };
   | ^ evaluation of `A2` failed inside this call
   |
note: inside `drop_in_place::<Option<String>> - shim(Some(Option<String>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `drop_in_place::<String> - shim(Some(String))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `drop_in_place::<Vec<u8>> - shim(Some(Vec<u8>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

error[E0493]: destructor of `(u32, Option<String>)` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:6:9
   |
LL |     let mut a: (u32, Option<String>) = (0, None);
   |         ^^^^^ the destructor for this type cannot be evaluated in constant functions
LL |     let _ = &mut a.1;
LL | }
   | - value is dropped here

error[E0493]: destructor of `Option<T>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:33:9
   |
LL |     let x: Option<T> = None;
   |         ^ the destructor for this type cannot be evaluated in constant functions
LL |     let _ = x.is_some();
LL | }
   | - value is dropped here

error[E0493]: destructor of `Option<T>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:41:9
   |
LL |     let _y = x;
   |         ^^ the destructor for this type cannot be evaluated in constant functions
LL | }
   | - value is dropped here

error[E0493]: destructor of `Option<String>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:49:9
   |
LL |     let mut y: Option<String> = None;
   |         ^^^^^ the destructor for this type cannot be evaluated in constant functions
LL |     std::ptr::addr_of_mut!(y);
LL | }
   | - value is dropped here

error[E0493]: destructor of `Option<String>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:46:9
   |
LL |     let mut x: Option<String> = None;
   |         ^^^^^ the destructor for this type cannot be evaluated in constant functions
...
LL | }
   | - value is dropped here

error[E0493]: destructor of `Option<String>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:59:9
   |
LL |     let y: Option<String> = None;
   |         ^ the destructor for this type cannot be evaluated in constant functions
LL |     std::ptr::addr_of!(y);
LL | }
   | - value is dropped here

error[E0493]: destructor of `Option<String>` cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:56:9
   |
LL |     let x: Option<String> = None;
   |         ^ the destructor for this type cannot be evaluated in constant functions
...
LL | }
   | - value is dropped here

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0080, E0493.
For more information about an error, try `rustc --explain E0080`.
